<?xml version="1.0" encoding="utf-8"?>
<!-- activity_business_card.xml -->

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

    <ImageView
            android:id="@+id/imageViewUserbc"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_launcher_foreground"
            android:contentDescription="@string/user_photo" />

    <TextView
            android:id="@+id/textViewUserNamebc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textSize="18sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"/>

    <TextView
            android:id="@+id/textViewUserProfessionbc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_profession"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"/>

    <TextView
            android:id="@+id/textViewUserActivitybc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_activity"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"/>

    <TextView
            android:id="@+id/textViewEmailbc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_email"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"/>

    <TextView
            android:id="@+id/textViewPhonebc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_phone"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"/>


    <!-- Adicione mais TextViews para outros atributos do usuário conforme necessário -->

    <LinearLayout
            android:id="@+id/layoutSocialMediaLinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

        <!-- Adicione logotipos e links das redes sociais -->
        <ImageView
                android:id="@+id/imageViewInstagram"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_instagram"
                android:contentDescription="@string/instagram"
                android:onClick="openInstagramProfile"/>

        <ImageView
                android:id="@+id/imageViewFacebook"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_facebook"
                android:contentDescription="@string/facebook"
                android:onClick="openFacebookProfile"/>

        <!-- Adicione mais ImageViews para outras redes sociais conforme necessário -->

    </LinearLayout>
</LinearLayout>
