<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewSelectImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select Image"
            android:backgroundTint="@color/red_brick"
            android:textColor="@android:color/white"
            android:layout_marginBottom="16dp"/>


        <ImageView
            android:id="@+id/imageViewUser"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_launcher_foreground"
            android:contentDescription="@string/user_photo"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_edittext"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/editTextUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_name"
                android:inputType="text"
                android:background="@drawable/rounded_edittext"
                android:padding="10dp"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/editTextUserProfession"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_profession_degree"
                android:inputType="text"
                android:background="@drawable/rounded_edittext"
                android:padding="10dp"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/editTextUserActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_activity"
                android:background="@drawable/rounded_edittext"
                android:padding="10dp"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/editTextUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:background="@drawable/rounded_edittext"
                android:padding="10dp"
                android:layout_marginBottom="8dp"/>
            <EditText
                android:id="@+id/editTextUserPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_phone"
                android:background="@drawable/rounded_edittext"
                android:padding="10dp"
                android:layout_marginBottom="8dp"/>
        </LinearLayout>


        <!-- Layout para exibir links de redes sociais -->
        <LinearLayout
            android:id="@+id/layoutSocialMediaLinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- Aqui serão adicionados dinamicamente os EditTexts para os links das redes sociais -->
        </LinearLayout>



        <Button
            android:id="@+id/buttonAddSocialMedia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add Social Media"
            android:backgroundTint="@color/red_brick"
            android:textColor="@android:color/white"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/buttonSaveUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_user"
            android:backgroundTint="@color/grey"
            android:textColor="@color/red_brick"/>

    </LinearLayout>
</ScrollView>